src/objects/Account.object
<CustomObject>
<!-- TPM Components Start        -->
	
		<fields>
        <fullName>UL_Customer_Hierarchy_Level__c</fullName>
        <description>This attribute will be used to identify the customer level</description>
        <label>Customer Hierarchy Level</label>
        <picklist>
            <picklistValues>
                <fullName>Level 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 1</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
	 <fields>
        <fullName>UL_Distribution_Channel_Code__c</fullName>
        <description>This attribute will be used as information only.</description>
        <inlineHelpText>This attribute will be used as information only.</inlineHelpText>
        <label>Distribution Channel Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UL_Distribution_Channel_Description__c</fullName>
        <description>This attribute will be used to segment a promotion (via customer sets).</description>
        <inlineHelpText>This attribute will be used to segment a promotion (via customer sets).</inlineHelpText>
        <label>Distribution Channel Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
	 <fields>
        <fullName>UL_Territory_Description__c</fullName>
        <description>This attribute will be used to segment a promotion (via customer sets).</description>
        <label>Territory Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>UL_Activity_Sector_Division_Code__c</fullName>
        <description>This attribute will be used as information only.  This attribute is linked to the product on the activity sector.</description>
        <inlineHelpText>This attribute will be used as information only.  This attribute is linked to the product on the activity sector.</inlineHelpText>
        <label>Activity Sector / Division Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>ACCL__Account_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ACCL__Account_Number__c</fullName>
        <label>Customer Number</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ACCL__Account_Template_Description__c</fullName>
        <formula>ACCL__Account_Template__r.ACCL__Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Template Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Account_Template__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer Template</label>
        <lookupFilter>
            <active>true</active>
            
            <filterItems>
                <field>ACCL__Account_Template__c.ACCL__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACCL__Account_Template__c</referenceTo>
        <relationshipLabel>Customers</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>en</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>de</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ACCL__Geolocation__c</fullName>
        <inlineHelpText>Latitude (-90; 90)
      Longitude (-180; 180)</inlineHelpText>
        <label>Geolocation</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>ACCL__Name_2__c</fullName>
        <label>Name 2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Number_Of_Extensions__c</fullName>
        <description>Number of extension records assigned to the account</description>
        <label>Number Of Extensions</label>
        <summaryForeignKey>ACCL__Account_Extension__c.ACCL__Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ACCL__Postal_Code__c</fullName>
        <label>Postal Code</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Sales_Org__c</fullName>
        <formula>Text(ACCL__Account_Template__r.ACCL__Sales_Org__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__Street__c</fullName>
        <label>Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
	<fields>
        <fullName>UL_Activity_Sector_Division_Description__c</fullName>
        <description>This attribute will be used to segment a promotion (via customer sets).  This attribute is linked to the product on the activity sector.</description>
        <inlineHelpText>This attribute will be used to segment a promotion (via customer sets).  This attribute is linked to the product on the activity sector.</inlineHelpText>
        <label>Activity Sector / Division Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UL_Currency__c</fullName>
        <description>Indicates whether the customer’s currency is British pounds (GBP) or Euros (EUR)</description>
        <inlineHelpText>Indicates whether the customer’s currency is British pounds (GBP) or Euros (EUR)</inlineHelpText>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UL_Customer_Description__c</fullName>
        <label>Customer Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UL_Customer_Group_Code__c</fullName>
        <description>This attribute will be interfaced to the customer master data table, but will not be displayed on the account record.</description>
        <inlineHelpText>This attribute will be interfaced to the customer master data table, but will not be displayed on the account record.</inlineHelpText>
        <label>Customer Group Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UL_Customer_Group_Description__c</fullName>
        <description>This attribute will be used to segment a promotion (via customer sets).  It is also possible to plan promotions at this level</description>
        <inlineHelpText>This attribute will be used to segment a promotion (via customer sets).  It is also possible to plan promotions at this level</inlineHelpText>
        <label>Customer Group Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
	
	 <fields>
        <fullName>UL_Customer_Role_Valid_From__c</fullName>
        <description>Effective date in the system (eg, first date that the customer has been received from ECC).</description>
        <label>Planning Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UL_Customer_Role_Valid_Thru__c</fullName>
        <description>End date for the customer in the system. This should ideally be an effectivity end date as customers should not be deleted entirely from ECC.</description>
        <label>Planning End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UL_Customer_Unique__c</fullName>
        <description>This attribute will be used to concatenate four fields</description>
        <formula>ACCL__Account_Number__c &amp; &quot;-&quot; &amp; UL_Sales_Organization__c + UL_Distribution_Channel_Code__c + UL_Activity_Sector_Division_Code__c</formula>
        <label>Customer Unique</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UL_DefaultSoldTo__c</fullName>
        <description>This attribute will be used as selecting the Sold To record for the levels where customer is</description>
        <label>Selected Default SoldTo</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UL_Direct_Indirect_Flag__c</fullName>
        <description>Indicates whether the sold-to is a direct or an indirect customer.</description>
        <inlineHelpText>Indicates whether the sold-to is a direct or an indirect customer.</inlineHelpText>
        <label>Direct/Indirect Flag</label>
        <picklist>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indirect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
	  <fields>
        <fullName>UL_Planning_Level_Rollup__c</fullName>
        <label>Planning Level Rollup</label>
        <summaryForeignKey>UL_Planning_Level__c.UL_Customer__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
	<fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
	
	 <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCL__Sales_Org__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>UL_Customer_Hierarchy_Level__c</columns>
        <columns>ACCOUNT.OWNERSHIP</columns>
        <columns>UL_Planning_Level__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Banner_Level_Records_AR01</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCL__Sales_Org__c</field>
            <operation>equals</operation>
            <value>AR01</value>
        </filters>
        <filters>
            <field>UL_Customer_Hierarchy_Level__c</field>
            <operation>equals</operation>
            <value>Level 7</value>
        </filters>
        <label>Banner Level Records AR01</label>
        <language>en_US</language>
        <sharedTo>
            <group>Argentina_SO</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Holding_Level_Records_AR01</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UL_Customer_Hierarchy_Level__c</field>
            <operation>equals</operation>
            <value>Level 6</value>
        </filters>
        <label>Holding Level Records</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCL__Sales_Org__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCL__Sales_Org__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCL__Sales_Org__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sold_To</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCL__Sales_Org__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UL_Customer_Hierarchy_Level__c</field>
            <operation>equals</operation>
            <value>Level 9</value>
        </filters>
        <label>Sold To</label>
        <language>en_US</language>
    </listViews>
	<listViews>
        <fullName>UK_Customers</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>UL_Customer_Hierarchy_Level__c</columns>
        <columns>ACCL__Sales_Org__c</columns>
        <columns>UL_Level_1__c</columns>
        <columns>UL_Level_2__c</columns>
        <columns>UL_Level_3__c</columns>
        <columns>UL_Level_4__c</columns>
        <columns>UL_Level_5__c</columns>
        <columns>UL_Level_6__c</columns>
        <columns>UL_Level_7__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCL__Sales_Org__c</field>
            <operation>equals</operation>
            <value>UK SO</value>
        </filters>
        <filters>
            <field>ACCL__Sales_Org__c</field>
            <operation>equals</operation>
            <value>Ireland SO</value>
        </filters>
        <label>UK Customers</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <recordTypes>
        <fullName>ACCL__Customer</fullName>
        <active>true</active>
        <label>Customer</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ACCL__ACSF_Prevent_Account_Template_Change</fullName>
        <active>false</active>
        <description>This validation rule will prevent User to change/ update Account Template selection on Account.</description>
        <errorConditionFormula>ISCHANGED( ACCL__Account_Template__c )</errorConditionFormula>
        <errorDisplayField>ACCL__Account_Template__c</errorDisplayField>
        <errorMessage>You cannot change the Account Template once the Account is created.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Only_One_Extension</fullName>
        <active>true</active>
        <errorConditionFormula>ACCL__Number_Of_Extensions__c &gt; 1</errorConditionFormula>
        <errorMessage>There must be no more than one extension record (Role) for an account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UL_AccNameCantEditExceptAdmin</fullName>
        <active>true</active>
        <description>This rule is to prevent the other user to not to change the Account name</description>
        <errorConditionFormula>AND( 
ISCHANGED( Name ), 
NOT($Profile.Name = &quot;System Administrator&quot;))</errorConditionFormula>
        <errorMessage>You can&apos;t edit/change Account name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UL_NCFFlagValidation</fullName>
        <active>true</active>
        <errorConditionFormula>Text(UL_Customer_Hierarchy_Level__c )!= &apos;Level 8&apos; &amp;&amp;  UL_NCF_Flag__c = true</errorConditionFormula>
        <errorDisplayField>UL_NCF_Flag__c</errorDisplayField>
        <errorMessage>NCF Flag can only to be set for Sold To(Level 8) record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UL_PlanEndDateShouldGreaterthanStartDate</fullName>
        <active>true</active>
        <description>Planning end date should be greater than or equal to planning start date</description>
        <errorConditionFormula>UL_Customer_Role_Valid_From__c &gt; UL_Customer_Role_Valid_Thru__c</errorConditionFormula>
        <errorMessage>Planning end date should be greater than planning start date</errorMessage>
    </validationRules>

<!-- TPM Components End          -->
    <fields>
        <fullName>AccountCurrency__c</fullName>
        <description>Purpose : Currency
Data Source : SAP | Integration : Mule | Security Level : Restricted</description>
        <label>Currency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Record_Count__c</fullName>
        <description>CEC this formula field puts the number 1 on the record for counting advantages on reports</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
	<fields>
        <fullName>UL_Customer_Group_Code__c</fullName>
        <description>This attribute will be interfaced to the customer master data table, but will not be displayed on the account record.</description>
        <inlineHelpText>This attribute will be interfaced to the customer master data table, but will not be displayed on the account record.</inlineHelpText>
        <label>Customer Group Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
	<fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <description>Additional information for &quot;Insurance, Trade Regs &amp; Policy&quot;.</description>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agency_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agency_Expertise__c</fullName>
        <label>Agency Expertise</label>
        <picklist>
            <picklistValues>
                <fullName>Behaviour Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment/Set Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experience Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaming Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Identity Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interactive Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lighting Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motion/Animation/Film Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Packaging Design 2D (Decoration)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Packaging Design 3D (Structure)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Point of Sale (POS) Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print/Advertisement/Comms Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research (Design Research)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sound/Music Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy/Foresight (Design)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainable Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transmedia/Experimental Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Interface Design</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Agree_to_Audits__c</fullName>
        <description>Do you agree to any records relating to Unilever activities or costs being audited?</description>
        <inlineHelpText>Do you agree to any records relating to Unilever activities or costs being audited?</inlineHelpText>
        <label>Business Auditing</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agree_to_comply_Unilever_Supplier_Code__c</fullName>
        <description>I have read, understood, and agree to comply with Unilever&apos;s Supplier Code</description>
        <inlineHelpText>I have read, understood, and agree to comply with Unilever&apos;s Supplier Code</inlineHelpText>
        <label>Agree to comply Unilever Supplier Code</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agree_to_logo_use__c</fullName>
        <description>Please attach a copy of your logo, in jpeg or png format (304px x 178 px). (To be added to Supporting Docs tab). Please also confirm if you agree to this image being used for internal communications purposes?</description>
        <inlineHelpText>Please attach a copy of your logo, in jpeg or png format (304px x 178 px). (To be added to Supporting Docs tab). Please also confirm if you agree to this image being used for internal communications purposes?</inlineHelpText>
        <label>Agree to logo use</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Anonymise_check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CEC Anonymise check is used to pick up accounts for nullfying the data based on retention date</description>
        <label>Anonymise check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Awards__c</fullName>
        <label>Awards</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bazaarvoice_Username__c</fullName>
        <description>CEC: To capture the bazaar voice user name</description>
        <label>Bazaarvoice Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>UL_Customer_Code__c</fullName>
        <label>Customer Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
	<!---->
    <fields>
        <fullName>Business_activity_types__c</fullName>
        <description>Please indicate the type of business activities your organisation is currently involved in. Please also distinguish between those that are currently provided to Unilever, and those that are not.</description>
        <inlineHelpText>Please indicate the type of business activities your organisation is currently involved in. Please also distinguish between those that are currently provided to Unilever, and those that are not.</inlineHelpText>
        <label>Business activity types</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CEC_Marketing_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CEC Marketing Opt In</description>
        <label>Marketing Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Children_under_12__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TO :</description>
        <label>Children Under 12</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Club_Member_Number__c</fullName>
        <description>TO: Club Member Number</description>
        <label>Club Member Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Structure__c</fullName>
        <label>Company Structure</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consumer_Note__c</fullName>
        <description>CEC: Displays images based on if Contact is frequent caller and/or a VIP</description>
        <formula>IF( VIP__c, IMAGE(&apos;/resource/CEC_VIP_icon&apos;,&apos;VIP&apos;,20,20), NULL)&amp;&apos;  &apos;&amp;
IF( ISPICKVAL( Known_Consumer__c, &apos;Frequent&apos;), IMAGE(&apos;/resource/CEC_FrequentCustomer_icon&apos;,&apos;Frequent&apos;,20,20), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consumer Note</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Financials Currency</label>
        <picklist>
            <picklistValues>
                <fullName>Algeria-DZD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina-ARS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia-AUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria-EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan-AZN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain-BHD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh-BDT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium-EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda-BMD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia-BOB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana-BWP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil-BRL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria-BGN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia-KHR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada-CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chile-CLP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China-CNY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia-COP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congo (Dem.Rep)-CDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costa Rica-CRC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatia-HRK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cyprus-EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Rep-CZK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark-DKK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dominican Rep-DOP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecuador-USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EEC-EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Egypt-EGP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estonia-EEK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ethiopia-ETB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerLegalCode__c</fullName>
        <description>Purpose : To display the Customer Legal Code
Data Source : NA | Integration : NA | Security Level : Restricted</description>
        <label>Customer Legal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerLegalName__c</fullName>
        <description>Purpose : To display the Customer Legal Name
 Data Source : SAP | Integration : Mule | Security Level : Restricted</description>
        <label>Customer Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Duns_Number__c</fullName>
        <description>D &amp; B Duns Number</description>
        <label>D &amp; B Duns Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Anonymized__c</fullName>
        <description>CEC - Date Anonymized used to capture the actual execution time and date of the anonymisation process.</description>
        <label>Date Anonymized</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Debit_Card_Expiry_Date__c</fullName>
        <formula>Debit_Card_Number__r.Expiry_Date__c</formula>
        <label>Debit Card Expiry Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>